<resources>
    <string name="app_name">SKORGift</string>

    <!-- Splash -->
    <string name="desc_splash">Splash Screen</string>

    <!-- Welcome -->
    <string name="title_create_account">CREATE AN ACCOUNT</string>
    <string name="txt_already_have_account">Already have account?</string>
    <string name="txt_sign_in_here">Sign in here</string>
    <string name="msg_welcome1">Pick the best gift easily for your loved ones (or for yourself!)</string>
    <string name="msg_welcome2">Get exclusive member discounts at many merchants around you</string>
    <string name="msg_welcome3">Get creative and personalize your gift greeting cards!</string>

    <!-- Create Account -->
    <string name="txt_email">Email</string>
    <string name="txt_confirm_email">Confirm Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="msg_sign_up_read_term">By signing up, you have read and agreed with SKORGift terms and conditions</string>

    <!-- Sign In -->
    <string name="title_sign_in">SIGN IN</string>
    <string name="title_forgot_password">FORGOT PASSWORD</string>

    <!-- Home -->
    <string name="txt_home">Home</string>
    <string name="txt_gifts">Gifts</string>
    <string name="txt_discounts">Discounts</string>
    <string name="txt_account">Account</string>
    <string name="title_your_points">YOUR POINTS</string>
    <string name="title_buy_points">BUY POINTS</string>
    <string name="title_transfer_points">TRANSFER</string>
    <string name="title_send_egift">SEND EGIFT</string>
    <string name="txt_redeem_points_with_gift">Redeem Points with Gifts</string>
    <string name="txt_topup">Top Up</string>
    <string name="txt_evoucher">e-Voucher</string>
    <string name="txt_voucher">Voucher</string>
    <string name="txt_ecommerce_more">eCommerce &amp; More</string>
    <string name="txt_get_free_discount">Get Free Discounts</string>
    <string name="txt_food_bev">Food &amp; Bev</string>
    <string name="txt_health_fit">Heath &amp; Fitness</string>
    <string name="txt_lifestyle">Lifestyle &amp; Recreation</string>
    <string name="txt_essential_more">Essential &amp; More</string>
    <string name="txt_featured_gift">Featured Gifts</string>
    <string name="title_see_all_gift">SEE ALL GIFTS</string>
    <string name="title_redeem">REDEEM</string>

    <!-- Gift -->
    <string name="txt_gift_topup_voucher">Top Up Voucher</string>
    <string name="txt_gift_evoucher">E-Voucher</string>
    <string name="txt_gift_voucher">Voucher</string>
    <string name="txt_gift_ecommerce_more">E-Commerce &amp; More</string>
</resources>
