<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_splash_background"
    android:fillViewport="true"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageButton
                android:id="@+id/imagebutton_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/ic_back_white"
                android:onClick="backButtonClicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_create_account"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_email"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:backgroundTint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_confirm_email"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edittext_confirm_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:backgroundTint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_password"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:backgroundTint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_confirm_password"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edittext_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:backgroundTint="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button_welcome_background"
                android:layout_marginTop="30dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_create_account"
                android:textColor="#FF1F00"
                android:textSize="14sp"
                android:onClick="createAccountButtonClicked"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/msg_sign_up_read_term"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>